--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,14 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 
+}
+.observed {
+    background-color: #f0f0f0;
+    padding: 10px;
+    margin-top: 20px;
+    text-align: center;
 }
 .container h1{
     font-size: 40px;
@@ -39,10 +46,18 @@
 
 .container .image-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns:repeat(3,1fr);
     padding: 10px;
 
 
+}
+
+
+@media screen and (max-width:430px) {
+    
+.container .image-container{
+    grid-template-columns:auto;
+}
 }
 
 .container .image-container .image{
